--- a/css/main.css
+++ b/css/main.css
@@ -153,13 +153,6 @@ button#reset {
   display: inline;
 }
 
-button#upgrade {
-  padding: 3px;
-  margin-left: 8px;
-  font-size: 0.8em;
-  display: inline;
-}
-
 
 #progressbg {
   background-color: #f60;
@@ -297,12 +290,6 @@ button#upgrade {
 
 
 
-#upgradeUrl {
-  font-size: 1.2em;
-  margin-bottom: 15px;
-  color: #f60;
-}
-
 
 #footer {
   margin: 30px auto 15px;
@@ -333,42 +320,17 @@ button#upgrade {
 
 
 
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.announcement-banner {
+  background: #ffd391;
+  font-size: 20px;
+  padding: 5px;
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 500px; /* Could be more or less, depending on screen size */
+#bannercloser {
+	position: absolute;
+	right: 10px;
 }
 
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.announcement-banner.disabled {
+  display: none;
 }
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
